tests/fail/transaction_outlive_transaction_db.stderr
error[E0597]: `db` does not live long enough
 --> tests/fail/transaction_outlive_transaction_db.rs:7:9
  |
5 |     let _txn = {
  |         ---- borrow later stored here
6 |         let db = TransactionDB::<SingleThreaded>::open_default("foo").unwrap();
  |             -- binding `db` declared here
7 |         db.transaction()
  |         ^^^^^^^^^^^^^^^^ borrowed value does not live long enough
8 |     };
  |     - `db` dropped here while still borrowed
